CMAKE_MINIMUM_REQUIRED(VERSION 2.4)

IF(COMMAND CMAKE_POLICY)
# Use old policy on ADD_DEFINITIONS and escaping
	CMAKE_POLICY(SET CMP0005 OLD)
# Use old policy to make mixing libraries with and without full paths ok
	CMAKE_POLICY(SET CMP0003 OLD)
ENDIF(COMMAND CMAKE_POLICY)

IF("${CMAKE_SYSTEM}" MATCHES "Linux")
	SET(LINUX TRUE)
ENDIF("${CMAKE_SYSTEM}" MATCHES "Linux")

PROJECT(OBDLogger)

SET(OBDLOGGER_MAJOR_VERSION 0)
SET(OBDLOGGER_MINOR_VERSION 4)

ADD_DEFINITIONS("-DOBDLOGGER_MAJOR_VERSION=${OBDLOGGER_MAJOR_VERSION}")
ADD_DEFINITIONS("-DOBDLOGGER_MINOR_VERSION=${OBDLOGGER_MINOR_VERSION}")

# This is the default serial port on my mac for my OBD Key
SET(OBD_DEFAULT_SERIALPORT "/dev/cu.OBDKeyPro-DevB-1" CACHE STRING "Default serial port filename")

SET(OBD_DEFAULT_DATABASE "./obdlogger.db" CACHE STRING "Default database filename for all obdgpslogger modules")

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${OBDLogger_SOURCE_DIR}/cmakemodules")

#OPTION(ENABLE_GPSD "Enable gps support using libgps" TRUE)
SET(ENABLE_GPSD "ON" CACHE BOOL "Enable gps support using libgps")
FIND_PACKAGE(GPSD)
IF(ENABLE_GPSD)
	IF(GPSD_FOUND)
		INCLUDE_DIRECTORIES(${GPSD_INCLUDE_DIR})
		ADD_DEFINITIONS(-DHAVE_GPSD)
	ELSE(GPSD_FOUND)
		SET(ENABLE_GPSD "OFF" CACHE BOOL "Enable gps support using libgps" FORCE)
		MESSAGE(STATUS "Couldn't find libgps")
	ENDIF(GPSD_FOUND)
ENDIF(ENABLE_GPSD)

CONFIGURE_FILE("${OBDLogger_SOURCE_DIR}/src/obdconfig.h.cmake" "${OBDLogger_BINARY_DIR}/obdconfig.h")
INCLUDE_DIRECTORIES("${OBDLogger_BINARY_DIR}")

SET(EXECUTABLE_OUTPUT_PATH "${OBDLogger_SOURCE_DIR}/bin")

SUBDIRS(
	libs
)

INCLUDE_DIRECTORIES(
	libs/sqlite3
	src/obdinfo/
)

SUBDIRS(
	src/obdinfo/
	src/
	src/kml/
	src/csv/
	src/gui/
)


FILE(GLOB manfiles1 ${OBDLogger_SOURCE_DIR}/man/man1/*.1)
INSTALL(FILES ${manfiles1} DESTINATION share/man/man1)


# And now, packaging...

IF(APPLE)
	SET(CPACK_GENERATOR "Bundle")
	SET(CPACK_BUNDLE_ICON "${OBDLogger_SOURCE_DIR}/osx/BundleIcon.icns")
	SET(CPACK_BUNDLE_NAME "OBD GPS Logger")
	SET(CPACK_BUNDLE_PLIST "${OBDLogger_SOURCE_DIR}/osx/Info.plist")
	SET(CPACK_BUNDLE_STARTUP_COMMAND "${OBDLogger_SOURCE_DIR}/osx/StartupCommand")
	SET(CPACK_PACKAGE_DESCRIPTION "Tool to log OBD and GPS data")
	SET(CPACK_PACKAGE_NAME "OBDGPSLogger")
	SET(CPACK_PACKAGE_VERSION "${OBDLOGGER_MAJOR_VERSION}.${OBDLOGGER_MINOR_VERSION}")

	INCLUDE(CPack)

	#CPACK_ADD_COMPONENT(obdgui REQUIRED)
	#CPACK_ADD_COMPONENT(obdgpslogger REQUIRED)
	#CPACK_ADD_COMPONENT(obd2kml REQUIRED)
	#CPACK_ADD_COMPONENT(obd2csv REQUIRED)
ENDIF(APPLE)

