INCLUDE_DIRECTORIES(
	.
)

FILE(GLOB OBDLOGGER_SRCS
	*.c
)

SET(OBDLOGGER_LIBS
	cksqlite
)

IF("${CMAKE_SYSTEM}" MATCHES "Linux")
	SET(OBDLOGGER_LIBS ${OBDLOGGER_LIBS} dl)
ENDIF("${CMAKE_SYSTEM}" MATCHES "Linux")

IF(ENABLE_GPSD)
	SET(OBDLOGGER_LIBS ${OBDLOGGER_LIBS} ${GPSD_LIBRARY})
ENDIF(ENABLE_GPSD)

ADD_EXECUTABLE(obdlogger ${OBDLOGGER_SRCS})

TARGET_LINK_LIBRARIES(obdlogger ${OBDLOGGER_LIBS})

INSTALL(TARGETS obdlogger
	RUNTIME DESTINATION bin)

