INCLUDE_DIRECTORIES(
	.
	./obdinfo/
)

FILE(GLOB OBDLOGGER_SRCS
	*.c
)

SET(OBDLOGGER_LIBS
	cksqlite ckobdinfo
)

IF("${CMAKE_SYSTEM}" MATCHES "Linux")
	SET(OBDLOGGER_LIBS ${OBDLOGGER_LIBS} pthread dl)
ENDIF("${CMAKE_SYSTEM}" MATCHES "Linux")

IF(ENABLE_GPSD)
	SET(OBDLOGGER_LIBS ${OBDLOGGER_LIBS} ${GPSD_LIBRARY})
ENDIF(ENABLE_GPSD)

ADD_EXECUTABLE(obdgpslogger ${OBDLOGGER_SRCS})

TARGET_LINK_LIBRARIES(obdgpslogger ${OBDLOGGER_LIBS})

INSTALL(TARGETS obdgpslogger
	RUNTIME DESTINATION bin)

