#SET(FLTK_SKIP_OPENGL true)
#SET(FLTK_SKIP_FORMS true)
#SET(FLTK_SKIP_IMAGES true)
FIND_PACKAGE(FLTK)

IF(FLTK_FOUND)

	INCLUDE_DIRECTORIES(
		.
		${FLTK_INCLUDE_DIR}
	)

	SET(OBDGUI_FL_SRCS
		maindisplay.fl
	)

	FLTK_WRAP_UI(ckobdfl ${OBDGUI_FL_SRCS})

	ADD_LIBRARY(ckobdfl STATIC ${ckobdfl_FLTK_UI_SRCS})


	FILE(GLOB OBDGUI_SRCS
		*.c
		*.cpp
	)

	SET(OBDGUI_SRCS ${OBDGUI_SRCS})

	SET(OBDGUI_LIBS
		ckobdfl
		${FLTK_LIBRARIES}
	)

	IF("${CMAKE_SYSTEM}" MATCHES "Linux")
       	SET(OBDGUI_LIBS ${OBDGUI_LIBS} pthread dl)
	ENDIF("${CMAKE_SYSTEM}" MATCHES "Linux")

	ADD_EXECUTABLE(obdgui ${OBDGUI_SRCS})

	TARGET_LINK_LIBRARIES(obdgui ${OBDGUI_LIBS})

	INSTALL(TARGETS obdgui
		RUNTIME DESTINATION bin)

ENDIF(FLTK_FOUND)

