INCLUDE_DIRECTORIES(
	.
)

FILE(GLOB OBDREPAIR_SRCS
	*.c *.h
)

SET(OBDREPAIR_LIBS
	cksqlite
)

IF("${CMAKE_SYSTEM}" MATCHES "Linux")
        SET(OBDREPAIR_LIBS ${OBDREPAIR_LIBS} pthread dl)
ENDIF("${CMAKE_SYSTEM}" MATCHES "Linux")

ADD_EXECUTABLE(obdlogrepair ${OBDREPAIR_SRCS})

TARGET_LINK_LIBRARIES(obdlogrepair ${OBDREPAIR_LIBS})

INSTALL(TARGETS obdlogrepair
	RUNTIME DESTINATION bin)


INSTALL(FILES ${OBDGPSLogger_SOURCE_DIR}/man/man1/obdlogrepair.1
	DESTINATION share/man/man1)

