INCLUDE_DIRECTORIES(
	.
)

SET(LIBOBDREPAIR_SRCS
	obdrepair.c  obdrepair.h
)

ADD_LIBRARY(ckobdrepair STATIC ${LIBOBDREPAIR_SRCS})

SET(OBDREPAIRMAIN_SRCS
	obdrepairmain.c
)

SET(OBDREPAIRMAIN_LIBS
	ckobdrepair
	cksqlite
)

IF("${CMAKE_SYSTEM}" MATCHES "Linux")
        SET(OBDREPAIRMAIN_LIBS ${OBDREPAIRMAIN_LIBS} pthread dl)
ENDIF("${CMAKE_SYSTEM}" MATCHES "Linux")

ADD_EXECUTABLE(obdlogrepair ${OBDREPAIRMAIN_SRCS})

TARGET_LINK_LIBRARIES(obdlogrepair ${OBDREPAIRMAIN_LIBS})

INSTALL(TARGETS obdlogrepair
	RUNTIME DESTINATION bin)

INSTALL(FILES ${OBDGPSLogger_SOURCE_DIR}/man/man1/obdlogrepair.1
	DESTINATION share/man/man1)

